--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
+asgiref
+Django
+django-cors-headers
+djangorestframework
+djangorestframework-simplejwt
+Pillow
+psycopg2
+PyJWT
+pytz
+sqlparse
+tzdata
 
